# draconity

./: .gitignore  CMakeLists.txt  LICENSE  README.md  TODO.md  build.sh  draconity.toml.example
src/: CoreSymbolication.h  abstract_platform.cpp  abstract_platform.h  api.h  code_hook.cpp  code_hook.h  codehook.h  dr_time.c  dr_time.h  draconity.cpp  draconity.h  phrase.cpp  phrase.h  platform.cpp  platform.h  server.cpp  server.h  shim.c  shim.cpp  symbol_load.h  symbolicator.cpp  symbolicator.h  tack.c  tack.h  transport.cpp  transport.h  transport.m  types.h
src/dragon/: foreign_grammar.cpp  foreign_grammar.h  foreign_rule.cpp  foreign_rule.h  grammar.cpp  grammar.h
src/transport/: client.h  server.cpp  server.h  transport.h
